2007-11-30  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-proc.el (w3m-process-y-or-n-p): Ignore space to avoid answering y
	without intention.

2007-11-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-url-new-session): Use
	w3m-active-region-or-url-at-point.  Reported by Naohiro Aota.

	* w3m-ems.el (w3m-create-image): Don't modify case-fold-search.

	* w3m-xmas.el (w3m-create-image): Ditto; parse image data to identify
	its type in the beginning position.

2007-11-29  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-w3m-dump-extra, w3m-w3m-retrieve): Removed image data
	type tests.

	* w3m-xmas.el (w3m-create-image): Parse image data first, use server's
	content-type when it failed to identify type.

	* w3m-ems.el (w3m-create-image): Ditto.

2007-11-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-search.el (w3m-search-engine-alist): Fix google news entry.

	* w3m-ems.el (w3m-create-image): Parse image data if it failed in
	identifying type.

	* w3m-xmas.el (w3m-create-image): Ditto.

2007-11-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-resize-inline-image-internal): Validate image url.
	Reported by Naohiro Aota <nao.aota@gmail.com>.

2007-11-27  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-toggle-inline-images-internal): Confirm retrieving
	non-secure image.
	(w3m-resize-inline-image-internal): Ditto.

2007-11-27  Katsumi Yamaoka  <yamaoka@jpl.org>,
	    TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-retrieve-and-render): Permit leaving safe pages without
	confirmation for several safe commands.

2007-11-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-symbol.el: Autoload w3m-mule-unicode-p when compiling.

	* w3m-proc.el: Update the way to suppress compile warning for gensym.

2007-11-26  Trent W. Buck  <trentbuck@gmail.com>

	* w3m.el (w3m-confirm-leaving-secure-page): New user option.
	(w3m-retrieve-and-render): Use it.

2007-11-22  Katsumi Yamaoka  <yamaoka@jpl.org>
